balance fix, limit creep collection

--- a/locale/en/Krastorio2.cfg
+++ b/locale/en/Krastorio2.cfg
@@ -440,6 +440,7 @@ kr-received-patreon-items=Thank you for supporting Krastorio 2! Have a look at y
 kr-roboport-modes-not-supported=This roboport cannot change modes
 kr-shelter-is-inactive=Shelter is inactive
 kr-transceiver-is-inactive=Transceiver is inactive
+wm-protected-creep-in-selection=Nest or worm is too close to collect creep
 
 [modifier-description]
 anti-material-rifle-ammo-damage-bonus=Anti-materiel rifle damage: +__1__
