creep damages player's buildings; creep gathering restricted by enemy chunks for Rampant new enemies; 6 biomass -> 1 biters research

--- a/locale/en/Krastorio2.cfg
+++ b/locale/en/Krastorio2.cfg
@@ -41,7 +41,8 @@ rare-metals=__ITEM__rare-metals__
 [command-help]
 kr-disable-radioactivity=- Disables radioactivity if it was enabled.
 kr-enable-radioactivity=- Enables radioactivity if it was disabled.
-kr-give-patreon-items=- Gives bonus items if you supported K2 on Patreon.
+disable-corrosion=- Disables acid DoT for turrets placed on creep.
+enable-corrosion=- Enables acid DoT for turrets placed on creep.
 
 [controls]
 kr-change-roboport-state=Change roboport mode
@@ -441,6 +442,9 @@ kr-roboport-modes-not-supported=This roboport cannot change modes
 kr-shelter-is-inactive=Shelter is inactive
 kr-transceiver-is-inactive=Transceiver is inactive
 wm-protected-creep-in-selection=Nest or worm is too close to collect creep
+corrosion-disabled=Turrets corrosion by creep acid is disabled !
+corrosion-enabled=Turrets corrosion by creep acid is enabled !
+
 
 [modifier-description]
 anti-material-rifle-ammo-damage-bonus=Anti-materiel rifle damage: +__1__
