Creep type-1 balance, incl New Enemies mode; Started creep miners feature

--- a/locale/en/Krastorio2.cfg
+++ b/locale/en/Krastorio2.cfg
@@ -344,6 +344,7 @@ kr-accelerator=Accelerator [color=173, 19, 173](Patreon Item)[/color]
 kr-biter-virus=Anti-biter virus capsule
 kr-black-reinforced-plate=Black reinforced plate
 kr-creep=Biter creep
+fk-creep=Biter creep-2
 kr-creep-collector=Creep collector
 kr-creep-virus=Anti-creep virus capsule
 kr-jackhammer=Jackhammer
