creep miners prototype (2 of 5 stages implemented)

--- a/locale/en/Krastorio2.cfg
+++ b/locale/en/Krastorio2.cfg
@@ -156,6 +156,8 @@ poop-cloud=Mystery substance cloud
 rare-metals=__ITEM__rare-metals__
 turret-remnant=Turret (remnant)
 virus-cloud=Virus cloud
+creep-processor0=Fuel-energy creep collector
+creep-processor1=Electrical creep collector
 
 [entity-description]
 biusart-lab=Many thanks to BiusArt for permission to use this laboratory in K2.
