--- a/locale/en/Krastorio2.cfg
+++ b/locale/en/Krastorio2.cfg
@@ -1,33 +1,8 @@
 [achievement-name]
-1000000-matter=Matter production 3
-100000-matter=Matter production 2
-10000-ai-core=Do androids dream of electric sheep?
-10000-matter=Matter production 1
-big-brother=Big brother is watching you
-death-on-wheels=Death on wheels
-destroyer-of-worlds=Destroyer of worlds
-dig-into-deep=Digging deep
-faster-than-light=Faster than light
-faster-than-sound=Faster than sound
-no-antimatter=Matter is for boys, fusion is for men
 
 [achievement-description]
-100000-matter=Produce 100k units of matter.
-1000000-matter=Produce 1M units of matter.
-10000-ai-core=Produce 10k AI Cores.
-10000-matter=Produce 10k units of matter.
-big-brother=Build 100 sentinels.
-death-on-wheels=Build an Advanced tank.
-dig-into-deep=Place a quarry drill for mining imersite.
-faster-than-light=Win the game in 20 hours or less.
-destroyer-of-worlds=Unlock Antimatter bomb.
-faster-than-sound=Win the game in 30 hours or less.
-no-antimatter=Win the game without building any antimatter reactors.
 
 [ammo-category-name]
-anti-material-rifle-ammo=Anti-materiel rifle ammo
-heavy-rocket=Heavy rocket
-impulse-rifle=Impulse rifle
 missiles-for-turrets=Turret missiles
 pistol-ammo=Pistol ammo
 railgun-shell=Railgun shell
@@ -45,10 +20,7 @@ disable-corrosion=- Disables acid DoT for turrets placed on creep.
 enable-corrosion=- Enables acid DoT for turrets placed on creep.
 
 [controls]
-kr-change-roboport-state=Change roboport mode
-kr-inserter-change-lane=Change inserter drop lane on belts
 kr-creep-collector=Get Creep collector
-kr-jackhammer=Get Jackhammer
 
 [controls-description]
 kr-change-roboport-state=Use this command on a roboport to toggle between normal, logistic, and construction modes.
@@ -152,80 +124,25 @@ kr-superior-underground-belt=Superior underground belt
 kr-tesla-coil=Tesla coil
 kr-wind-turbine=Wind turbine
 mineral-water=Mineral water
-poop-cloud=Mystery substance cloud
 rare-metals=__ITEM__rare-metals__
 turret-remnant=Turret (remnant)
-virus-cloud=Virus cloud
 
 [entity-description]
-biusart-lab=Many thanks to BiusArt for permission to use this laboratory in K2.
 kr-advanced-assembling-machine=A more powerful assembling machine. Has access to some advanced processed for converting ores directly into intermediate products.
 kr-advanced-chemical-plant=A more powerful chemical plant.
 kr-advanced-furnace=A more powerful furnace.
 kr-air-purifier=Absorbs pollution in the chunk where it is placed.
 kr-atmospheric-condenser=Slowly extracts gases from the atmosphere.
 kr-bio-lab=Greatly ease biters research.
-kr-crash-site-building=[color=red]Warning![/color] If this building is deconstructed will give back some raw material but can't be rebuilt!
-kr-crusher=Crushes items placed into it. Some items will return components, but most items will be crushed completely!
-kr-electrolysis-plant=Runs electricity through liquids to produce chemical reactions.
-kr-filtration-plant=Filters out some materials from liquids.
-kr-fluid-burner=Burns any fluid, releasing a large amount of pollution and occasionally some byproducts.
-kr-fusion-reactor=Fuses the atoms in a [item=dt-fuel] DT-fuel cell to produce a large amount of energy. One fusion reactor can support 20 advanced turbines.
-kr-gas-power-station=Burns fluid to produce energy. Inefficient, but easy!
-kr-matter-assembler=Transforms matter into intermediate products.
-kr-matter-plant=Converts materials into raw matter.
-kr-planetary-teleporter=Instantly transports one player at a time to another teleporter on the same surface.
 kr-sentinel=Keeps watch over a small area.
-kr-shelter-plus=Advanced home for Energy Demons! Sets the spawn point for your force. Each force can only have one shelter per surface.
-kr-shelter=Sets the spawn point for your force. Each force can only have one shelter per surface.
-kr-stabilizer-charging-station=Charges matter stabilization cells.
-kr-steel-pipe=A pipe that supports greater pressure.
-kr-steel-pipe-to-ground=An underground pipe that supports greater pressure.
-kr-tesla-coil=Recharges equipment grids that have an [item=energy-absorber] Energy absorber. Two towers may not be placed too close together!
-kr-wind-turbine=Produces a small amount of energy from the wind.
 
 [entity-status]
 kr-not-enough-input=Not enough power [img=info]
 kr-ready=Ready
 
 [entity-status-tooltip]
-kr-not-enough-input=The transceiver requires at least 15 GW of power input in order to charge.
 
 [equipment-name]
-additional-engine=Additional electric engine
-advanced-additional-engine=Advanced additional electric engine
-advanced-exoskeleton-equipment=Advanced exoskeleton
-antimatter-reactor-equipment=Portable antimatter reactor
-battery-mk3-equipment=Personal battery MK3
-big-battery-equipment=Big personal battery
-big-battery-mk2-equipment=Big personal battery MK2
-big-battery-mk3-equipment=Big personal battery MK3
-big-imersite-solar-panel-equipment=Big portable imersite solar panel
-big-solar-panel-equipment=Big portable solar panel
-cyber-potato-equipment=Cyber potato
-energy-absorber=Energy absorber
-fusion-reactor-equipment=Portable fusion reactor
-imersite-night-vision-equipment=Imersite nightvision
-imersite-solar-panel-equipment=Portable imersite solar panel
-nuclear-reactor-equipment=Portable nuclear reactor
-personal-sniper-laser-defense-mk1-equipment=Personal sniper laser defense
-personal-sniper-laser-defense-mk2-equipment=Personal sniper laser defense MK2
-personal-sniper-laser-defense-mk3-equipment=Personal sniper laser defense MK3
-personal-sniper-laser-defense-mk4-equipment=Personal sniper laser defense MK4
-personal-submachine-laser-defense-mk1-equipment=Personal submachine laser defense
-personal-submachine-laser-defense-mk2-equipment=Personal submachine laser defense MK2
-personal-submachine-laser-defense-mk3-equipment=Personal submachine laser defense MK3
-personal-submachine-laser-defense-mk4-equipment=Personal submachine laser defense MK4
-portable-generator=Portable generator
-power-armor-mk3=Power armor MK3
-power-armor-mk4=Power armor MK4
-shield-generator-mk1=Shield generator
-shield-generator-mk2=Shield generator MK2
-shield-generator-mk3=Shield generator MK3
-shield-generator-mk4=Shield generator MK4
-small-portable-generator=Small portable generator
-superior-exoskeleton-equipment=Superior exoskeleton
-vehicle-roboport=Vehicle roboport
 
 [equipment-description]
 additional-engine=Somewhat increases max speed and acceleration of the vehicle it is placed in (exception: locomotives only have their acceleration increased).
@@ -260,22 +177,6 @@ kr-change-drop-lane=Change drop lane
 kr-change-mode=Change mode
 kr-far=Far
 kr-near=Near
-kr-intergalactic-transceiver-alert-discharging=Transceiver is discharging!
-kr-intergalactic-transceiver-alert-not-enough-input=Transceiver does not have enough power!
-kr-intergalactic-transceiver-alert-no-power=Transceiver does not have power!
-kr-intergalactic-transceiver-alert-ready=Transceiver is ready for activation!
-kr-planetary-teleporter-destination-blocked-tooltip=Destination blocked.
-kr-planetary-teleporter-invalid=Invalid teleporter, refreshing table.
-kr-planetary-teleporter-low-power-tooltip=Low power.
-kr-planetary-teleporter-name-and-distance=__1__ __REMARK_COLOR_BEGIN__[__2__m]__REMARK_COLOR_END__
-kr-planetary-teleporter-no-destinations-found=No destinations found.
-kr-planetary-teleporter-rename-tooltip=Rename
-kr-planetary-teleporter-search-tooltip=Search (__CONTROL__focus-search__)
-kr-planetary-teleporter-teleport-tooltip=Teleport
-kr-planetary-teleporter-unnamed=<Unnamed>
-kr-planetary-teleporter-warning-low_power=Low power.
-kr-planetary-teleporter-warning-not_on_teleporter=Not standing on teleporter.
-kr-planetary-teleporter-warning-too_many_players=Too many players on teleporter.
 
 [item-name]
 advanced-fuel=Advanced fuel
@@ -284,14 +185,6 @@ advanced-tank-cannon-b=Fast railgun B
 advanced-tank-cannon-c=Sniper railgun
 advanced-tank-laser-cannon=Impulse cannon
 advanced-tank-machine-gun=Heavy machine gun
-advanced-tech-card=Advanced tech card
-ai-core=AI core
-anti-material-rifle=Anti-materiel rifle
-anti-material-rifle-magazine=Anti-materiel rifle magazine
-antimatter-artillery-shell=Antimatter artillery shell
-antimatter-railgun-shell=Antimatter railgun shell
-antimatter-rocket=Antimatter rocket
-antimatter-turret-rocket=Antimatter turret rocket
 armor-piercing-anti-material-rifle-magazine=Armor piercing anti-materiel rifle magazine
 armor-piercing-pistol-magazine=Armor piercing pistol magazine
 armor-piercing-rifle-magazine=Armor piercing rifle magazine
@@ -326,51 +219,15 @@ glass=Glass
 gps-satellite=GPS satellite
 heavy-rocket=Heavy rocket
 heavy-rocket-launcher=Heavy rocket launcher
-imersite-anti-material-rifle-magazine=Imersite anti-materiel rifle magazine
-imersite-crystal=Imersite crystal
-imersite=Imersite
-imersite-powder=Imersite powder
-imersite-rifle-magazine=Imersite rifle magazine
-imersite-rounds-magazine=Imersite rounds magazine
-imersium-beam=Imersium beam
-imersium-gear-wheel=Imersium gear wheel
-imersium-plate=Imersium plate
-improved-pollution-filter=Improved pollution filter
-impulse-rifle-ammo=Impulse rifle ammo
-impulse-rifle=Impulse rifle
 inserter-parts=Inserter parts
-iron-beam=Iron beam
-kr-accelerator=Accelerator [color=173, 19, 173](Patreon Item)[/color]
-kr-biter-virus=Anti-biter virus capsule
-kr-black-reinforced-plate=Black reinforced plate
 kr-creep=Biter creep
+fk-creep=Biter creep type-2
 kr-creep-collector=Creep collector
-kr-creep-virus=Anti-creep virus capsule
-kr-jackhammer=Jackhammer
-kr-loader=Loader
-kr-note-1=Mystery note
-kr-void=Nothing
-kr-white-reinforced-plate=Light reinforced plate
-lithium-chloride=Lithium chloride
-lithium=Lithium
-lithium-sulfur-battery=Lithium–sulfur battery
-logistic-tech-card=Logistic tech card
-matter-cube=Matter cube
-matter-research-data=Matter research data
-matter-stabilizer=Matter stabilizer
-matter-tech-card=Matter tech card
 military-research-data=Military research data
-military-tech-card=Military tech card
 nuclear-artillery-shell=Nuclear artillery shell
 nuclear-turret-rocket=Nuclear turret rocket
-optimization-tech-card=Optimization tech card
 pistol-magazine=Pistol magazine
 pollution-filter=Pollution filter
-poop=Mystery substance
-potato=Potato [color=173, 19, 173](Patreon Item)[/color]
-power-armor-mk3=Power armor MK3
-power-armor-mk4=Power armor MK4
-production-tech-card=Production tech card
 quartz=Quartz
 rare-metals=Rare metals
 raw-imersite=Raw imersite
