Creep Miners re-design (built-in chests removed) Chests auto-attach introduced Bio remains introduced Bio remains endgame recipe added Bio labs prototype fixed (allows fluids: 2 in and 2 out) Localized strings added

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -20,11 +20,12 @@ disable-corrosion=- Disables acid DoT for turrets placed on creep.
 enable-corrosion=- Enables acid DoT for turrets placed on creep.
 
 [controls]
-kr-creep-collector=Get Creep collector
+kr-creep-collector=Get portable Creepmeter
 
 [controls-description]
 kr-change-roboport-state=Use this command on a roboport to toggle between normal, logistic, and construction modes.
 kr-inserter-change-lane=Use this command on an inserter to toggle between dropping on the far lane and near lane of a belt.
+kr-creep-collector=Select biter creep area to estimate natives biosubstances
 
 [damage-type-name]
 kr-explosion=Explosion
@@ -99,8 +100,8 @@ kr-rocket-turret=Rocket turret
 kr-se-loader=Space loader
 kr-sentinel=Sentinel
 turret-remnant=Turret (remnant)
-creep-processor0=Fuel-energy creep collector
-creep-processor1=Electrical creep collector
+creep-miner0-radar=Fuel-energy creep collector
+creep-miner1-radar=Electrical creep collector
 
 [entity-description]
 kr-advanced-assembling-machine=A more powerful assembling machine. Has access to some advanced processed for converting ores directly into intermediate products.
@@ -110,6 +111,8 @@ kr-air-purifier=Absorbs pollution in the chunk where it is placed.
 kr-atmospheric-condenser=Slowly extracts gases from the atmosphere.
 kr-bio-lab=Greatly ease biters research.
 kr-sentinel=Keeps watch over a small area.
+creep-miner0-radar=Excavates biter creep using chemical fuel energy
+creep-miner1-radar=Excavates biter creep using electical energy
 
 [entity-status]
 kr-not-enough-input=Not enough power [img=info]
@@ -168,6 +171,7 @@ basic-railgun-shell=Railgun shell
 basic-tech-card=Basic tech card
 bio-fuel=Biofuel
 biomass=Biomass
+wm-bio-remains=Bio residue
 biters-research-data=Biter research data
 blank-tech-card=Blank tech card
 charged-antimatter-fuel-cell=Charged antimatter fuel cell
@@ -234,10 +238,6 @@ improved-pollution-filter=This filter is twice as effective as the normal one.
 inserter-parts=Basic components for any inserter. ([color=orange]You can take apart any inserter in the crusher[/color]).
 kr-accelerator=This is a gift from your friends. This gun will accelerate pistol bullets, allowing them to deal increased damage.
 kr-biter-virus=Contains a powerful virus that will cull a significant portion of the biter population. Also damages biter DNA, regressing them into a less dangerous form.
-kr-creep-collector=Drag and drop with this tool over [item=biomass] biter creep to collect it.
-kr-creep-virus=Contains a powerful virus, permanently killing all [item=biomass] biter creep and preventing more from generating. Also damages biter DNA, regressing them into a less dangerous form.
-kr-jackhammer=Quickly removes concrete, bricks, and plates from the selected area.
-kr-note-1=Seriously? You've come all this way for this!? You spent long hours constructing a base, researching new technologies, fighting monsters, and for what? To launch THIS into space? Oh, I have no words...
 optimization-tech-card=Obtained by processing space scientific data.
 poop=Eww! You are disgusting!
 potato=A huge potato! It seems to be edible, but maybe it can be sent somewhere?
@@ -254,7 +254,6 @@ speed-module-limitation=Speed modules cannot be used on this recipe.
 smelting-crafting=Smelting-crafting
 
 [message]
-kr-already-got-patreon-items=You have already received your Patreon items!
 kr-already-one-energy-absorber=There is already an Energy Absorber in this equipment grid
 kr-collected-amount=Collected __1__ __2__
 kr-construction-mode=Construction mode
@@ -350,6 +349,7 @@ recipe-variation=__1__ (Variation)
 wiki-info=[font=heading-2]Wiki-Info:\nIf you have any questions,\nremember to check out the\nKrastorio 2 tips and tricks.[/font]
 
 [recipe-name]
+wm-residue-sulphuric-acid=High temperature bio remains transformation into sulphuric acid
 burner-inserter-to-parts=Crush burner inserter
 coal-filtration=Coal filtration
 coke-liquefaction=Coke liquefaction
@@ -549,10 +549,7 @@ kr-automation-core=A standardized, reusable mechanical machine core is the first
 kr-basic-fluid-handling=Acquire and transport basic fluids.
 kr-battery-mk3-equipment=An even more powerful batterie for your vehicles and equipment.
 kr-bio-fuel=More powerful fuel for your vehicles and equipment.
-kr-bio-processing=Makes biters research much less biomass hungry, but still requires some creep hunt.
-kr-biter-virus=A powerful virus that will cull a significant portion of the biter population. Also damages biter DNA, regressing them into a less dangerous form.
-kr-containers=Larger containers for your items.
-kr-creep-virus=A powerful virus that permanently kills all biter creep and prevents more from generating. Also damages biter DNA, regressing them into a less dangerous form.
+kr-bio-processing=Makes biters research much less biomass hungry, but still requires some creep type-1 hunt.
 kr-crusher=Crush any item. Some items will return components, but most items will be crushed completely!
 kr-decorations=There is nothing else quite like artificial nature.
 kr-efficient-fabrication=More efficient ways of fabricating basic components.
