--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -112,7 +112,7 @@ kr-atmospheric-condenser=Slowly extracts gases from the atmosphere.
 kr-bio-lab=Greatly ease biters research.
 kr-sentinel=Keeps watch over a small area.
 creep-miner0-radar=Excavates biter creep using chemical fuel energy
-creep-miner1-radar=Excavates biter creep using electical energy
+creep-miner1-radar=Excavates biter creep using electrical energy, has bigger range and is a little faster
 
 [entity-status]
 kr-not-enough-input=Not enough power [img=info]
@@ -274,7 +274,7 @@ kr-transceiver-is-inactive=Transceiver is inactive
 wm-protected-creep-in-selection=Nest or worm is too close to collect creep
 corrosion-disabled=Building corrosion by creep acid is disabled !
 corrosion-enabled=Buildings corrosion by creep acid is enabled !
-kr-amount-in-selection=Amount of creep selected:__1__ __2__ and __3__ __4__
+kr-amount-in-selection=Selected area contains: __1__ __2__ and __3__ __4__
 corrosion-strikes-disabled=Biters retaliation strikes are disabled !
 corrosion-strikes-enabled=Biters retaliation strikes are enabled !
 
