Burner creep miner re-fuel change Reduced burner miner energy cost Minor fixes

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -200,7 +200,7 @@ heavy-rocket-launcher=Heavy rocket launcher
 inserter-parts=Inserter parts
 kr-creep=Biter creep
 fk-creep=Biter creep type-2
-kr-creep-collector=Creep collector
+kr-creep-collector=Get portable CreepMeter
 military-research-data=Military research data
 nuclear-artillery-shell=Nuclear artillery shell
 nuclear-turret-rocket=Nuclear turret rocket
