updating changelog for release

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -30,7 +30,7 @@ wm-bio-remains=Bio residue
 biters-research-data=Biter research data
 kr-creep=Biter creep
 fk-creep=Biter creep type-2
-kr-creep-collector=Get portable CreepMeter
+kr-creep-collector=CreepMeter
 military-research-data=Military research data
 
 [message]
