Electric cr-miner emission and consumption update

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -18,7 +18,7 @@ creep-miner1-radar=Electrical creep collector
 [entity-description]
 kr-bio-lab=Greatly eases biters research.
 creep-miner0-radar=Excavates biter creep using chemical fuel energy
-creep-miner1-radar=Excavates biter creep using electrical energy, has bigger range and is a little faster
+creep-miner1-radar=Excavates biter creep using electrical energy, has bigger range and is 33% faster
 
 [entity-status]
 kr-not-enough-input=Not enough power [img=info]
@@ -51,8 +51,6 @@ wm-no-storage-for-true-creep=No chest found to store biomass of excavated biter 
 wm-all-creep-protected=All reachable (even without biomass) creep is protected by enemies
 
 [other]
-kr-something-went-wrong=Something went wrong.
-kr-taking-radioactive-damage=Taking radioactive damage!
 offshore-pump-is-electric=__1__ [color=orange]This pump requires 20kW to work![/color]
 
 [recipe-name]
@@ -76,7 +74,6 @@ kr-bio-processing=Bioprocessing
 kr-military=Military
 
 [technology-description]
-kr-bio-fuel=More powerful fuel for your vehicles and equipment.
 kr-bio-processing=Makes biters research much less biomass hungry, but still requires some creep type-1 hunt.
 
 [tooltip-category]
