creep miners pollution reduced by 30%

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -91,7 +91,7 @@ wm-CreepMinerFueling=Automatically refuel burner Creep Miner
 [mod-setting-description]
 wm-BiomassToBitersReseach=Recommended value is 7, but for double Technology cost value of 4 is recommended.
 wm-CreepMiningPollution=Pollution is generated at miner location. Default value is 1.5 . Reduce accordingly when pollution absorption is decreased (e.g. 0.9 for classic Deathworld map setup).
-wm-CreepMiningPollution_s=Creep miner pollution generated per creep tile. Default value is 1.2. Reduce proportionally when pollution absorption modifier is decreased (e.g. please set 0.6 for classic Deathworld map setup).
+wm-CreepMiningPollution_s=Creep miner pollution generated per creep tile. Default value is 1. Reduce proportionally when pollution absorption modifiers are decreased (e.g. please set 0.5 for classic Deathworld map setup).
 wm-CreepMiningTilesPerCycle=Default value is 7. Don't touch it unless you know game balance.
 wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hitpoints due to acid DoT (Evolution speeds up the process!). Damage effect diminishes with structure health and stops when a few hitpoints % are left. Changing the setting applies to new events.
 wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
