--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "defines",
         "remote",
         "tile_variations_template",
-        "rendering"
+        "rendering",
+        "global"
     ]
 }
