creep tile locale texts fix

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -65,6 +65,7 @@ kr-creep-collector=__ITEM__kr-creep-collector__
 
 [tile-name]
 kr-creep=__ITEM__kr-creep__
+fk-creep=__ITEM__fk-creep__
 
 [tile-description]
 kr-creep=Nobody knows that this stuff is, but it grows around biters and smells bad.
