--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -89,6 +89,8 @@ wm-CreepCorrosion=Enable Corrosion by Creep
 wm-CounterStrike=Enable Biter's Nests counter-strikes (requires enabled Corrosion)
 wm-CreepMinerHints=Show hints when Creep Miner is blocked
 wm-CreepMinerFueling=Automatically refuel burner Creep Miner
+wm-ecoFriendlyBiters=Biters revive trees they destroy
+
 [mod-setting-description]
 wm-BiomassToBitersReseach=Recommended value is 7, but for double Technology cost value of 4 is recommended.
 wm-CreepMiningPollution=Pollution is generated at miner location. Default value is 1.5 . Reduce accordingly when pollution absorption is decreased (e.g. 0.9 for classic Deathworld map setup).
@@ -98,3 +100,4 @@ wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hit
 wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
 wm-CreepMinerHints=Show flying text hints about the reason creep miner stopped working while there is still creep in its range.
 wm-CreepMinerFueling=Half stack of available fuel is inserted. Fuel with least pollution coefficient is selected. Gathered bio residue is inserted as fuel when no free slots are available in linked chest or when out of fuel.
+wm-ecoFriendlyBiters=Biters respect and revive local flora they destroy. Especially useful with Rampant.
