fixed texts for trees revival feature

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -100,4 +100,4 @@ wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hit
 wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
 wm-CreepMinerHints=Show flying text hints about the reason creep miner stopped working while there is still creep in its range.
 wm-CreepMinerFueling=Half stack of available fuel is inserted. Fuel with least pollution coefficient is selected. Gathered bio residue is inserted as fuel when no free slots are available in linked chest or when out of fuel.
-wm-ecoFriendlyBiters=Biters respect and revive local flora they destroy. Especially useful with Rampant.
+wm-ecoFriendlyBiters=Biters respect and revive local flora they destroy on the way. Trees return in about 15 minutes. Especially useful with Rampant.
