More biolab recipes tuning: bio-remains co-product

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -54,6 +54,7 @@ wm-all-creep-protected=All reachable (even without biomass) creep is protected b
 offshore-pump-is-electric=__1__ [color=orange]This pump requires 20kW to work![/color]
 
 [recipe-name]
+kr-biomass-growing=Biter data research in biolab
 wm-residue-sulphuric-acid=High temperature bio remains transformation into sulphuric acid
 
 [recipe-description]
