bots: fuel, ochre, biomass. Biomass

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -30,6 +30,7 @@ wm-bio-remains=Bio residue
 biters-research-data=Biter research data
 kr-creep=Biter creep
 fk-creep=Biter creep type-2
+wm-ochre=Ochre
 kr-creep-collector=CreepMeter
 military-research-data=Military research data
 
@@ -70,6 +71,7 @@ fk-creep=__ITEM__fk-creep__
 
 [tile-description]
 kr-creep=Nobody knows that this stuff is, but it grows around biters and smells bad.
+fk-creep=Nobody knows that this stuff is, but it grows around biters and smells bad.
 
 [technology-name]
 kr-bio-processing=Bioprocessing
