--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -89,16 +89,13 @@ wm-CreepMiningPollution=Amount of Pollution generated per each Creep tile excava
 wm-CreepMiningPollution_s=Creep Miner emissions coefficient
 wm-CreepMiningTilesPerCycle=Amount of Creep tiles excavated by Creep Miner per work cycle
 wm-CreepCorrosion=Enable Corrosion by Creep
-wm-CounterStrike=Enable Biter's Nests counter-strikes (requires enabled Corrosion)
+wm-CounterStrike=Enable Biter's Nests counter-strikes
 wm-CreepMinerHints=Show hints when Creep Miner is blocked
 wm-CreepMinerFueling=Automatically refuel burner Creep Miner
 wm-ecoFriendlyBiters=Biters revive trees they destroy
 
 [mod-setting-description]
-wm-BiomassToBitersReseach=Recommended value is 7, but for double Technology cost value of 4 is recommended.
-wm-CreepMiningPollution=Pollution is generated at miner location. Default value is 1.5 . Reduce accordingly when pollution absorption is decreased (e.g. 0.9 for classic Deathworld map setup).
-wm-CreepMiningPollution_s=Multiplier of creep miner emissions. Default value is 1. Reduce proportionally when pollution absorption modifiers are decreased (e.g. please set 0.5 for classic Deathworld map setup).
-wm-CreepMiningTilesPerCycle=Default value is 7. Don't touch it unless you know game balance.
+wm-BiomassToBitersReseach=Set 0 to have a light mode. Recommended value is 4, but for double Technology cost value of 2 is recommended.
 wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hitpoints due to acid DoT (Evolution speeds up the process!). Damage effect diminishes with structure health and stops when a few hitpoints % are left. Changing the setting applies to new events.
 wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
 wm-CreepMinerHints=Show flying text hints about the reason creep miner stopped working while there is still creep in its range.
