creep droid ui fixes

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -14,6 +14,7 @@ kr-mineral-water-pumpjack=Mineral water pumpjack
 kr-oil-pumpjack=Oil pumpjack
 creep-miner0-radar=Fuel-energy creep collector
 creep-miner1-radar=Electrical creep collector
+wm-droid-1=Creep miner
 
 [entity-description]
 kr-bio-lab=Greatly eases biters research.
@@ -33,6 +34,7 @@ fk-creep=Biter creep type-2
 wm-ochre=Ochre
 kr-creep-collector=CreepMeter
 military-research-data=Military research data
+wm-droid-1=Creep miner
 
 [message]
 kr-collected-amount=Collected __1__ __2__
@@ -76,9 +78,11 @@ fk-creep=Nobody knows that this stuff is, but it grows around biters and smells 
 [technology-name]
 kr-bio-processing=Bioprocessing
 kr-military=Military
+wm-creepmining-droid=Creep extraction
 
 [technology-description]
 kr-bio-processing=Makes biters research much less biomass hungry, but still requires some creep type-1 hunt.
+wm-creepmining-droid=Build droids to automatically search (in a small radius) and extract creep from planet surface
 
 [tooltip-category]
 shot=Thrown
