--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -59,10 +59,12 @@ offshore-pump-is-electric=__1__ [color=orange]This pump requires 20kW to work![/
 [recipe-name]
 kr-biomass-growing=Biter data research in biolab
 wm-residue-sulphuric-acid=High temperature bio remains transformation into sulphuric acid
+wm-bob-artifact-synth=Biomass into alien artifacts
 
 [recipe-description]
 kr-burn=Burn __1__. This process produces no byproducts, but will release a high quantity of pollution into the atmosphere.
 kr-burn-with-residue=Burn __1__. This process will release a high quantity of pollution and may produce __2__ as a byproduct.
+wm-bob-artifact-synth=Making alien artifacts out of creep bio products
 
 [shortcut-name]
 kr-creep-collector=__ITEM__kr-creep-collector__
