hidden biolab, bob changes bioresidue

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -10,6 +10,7 @@ kr-inserter-change-lane=Use this command on an inserter to toggle between droppi
 kr-creep-collector=Select biter creep area to estimate natives biosubstances
 
 [entity-name]
+kr-bio-lab=Biolab
 kr-mineral-water-pumpjack=Mineral water pumpjack
 kr-oil-pumpjack=Oil pumpjack
 creep-miner0-radar=Fuel-energy creep collector
