Ochre tech requirement

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -66,6 +66,7 @@ wm-bob-artifact-synth=Biomass into alien artifacts
 kr-burn=Burn __1__. This process produces no byproducts, but will release a high quantity of pollution into the atmosphere.
 kr-burn-with-residue=Burn __1__. This process will release a high quantity of pollution and may produce __2__ as a byproduct.
 wm-bob-artifact-synth=Making alien artifacts out of creep bio products
+wm-ochre=Ochre is required for creep displacement
 
 [shortcut-name]
 kr-creep-collector=__ITEM__kr-creep-collector__
