BobEnemies related WM setting

--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -103,7 +103,7 @@ wm-CreepMinerFueling=Automatically refuel burner Creep Miner
 wm-ecoFriendlyBiters=Biters revive trees they destroy
 
 [mod-setting-description]
-wm-BiomassToBitersReseach=Set 0 to have a light mode. Recommended value is 4, but for double Technology cost value of 2 is recommended.
+wm-BiomassToBitersReseach=Set 0 to have no need in biomass for military science. For double technology cost a halved value is recommended unless playing vs aggressively expanding natives.
 wm-CreepCorrosion=Any building installed on creep tiles will corrode - loose hitpoints due to acid DoT (Evolution speeds up the process!). Damage effect diminishes with structure health and stops when a few hitpoints % are left. Changing the setting applies to new events.
 wm-CounterStrike=Biters nests will counter attack with corrosion seeds sometimes when nearby nests are destroyed remotely. Minimum distance to trigger attack increases with evolution. Artillery and nuke fans - beware!
 wm-CreepMinerHints=Show flying text hints about the reason creep miner stopped working while there is still creep in its range.
