--- a/locale/en/Warmonger.cfg
+++ b/locale/en/Warmonger.cfg
@@ -54,15 +54,14 @@ wm-true-creep-protected=Creep miner is blocked by enemies to collect only BIOMAS
 wm-no-storage-for-true-creep=No chest found to store biomass of excavated biter creep
 wm-all-creep-protected=All reachable (even without biomass) creep is protected by enemies
 
-[other]
-offshore-pump-is-electric=__1__ [color=orange]This pump requires 20kW to work![/color]
-
 [recipe-name]
-kr-biomass-growing=Biter data research in biolab
-wm-residue-sulphuric-acid=High temperature bio remains transformation into sulphuric acid
+kr-biomass-growing=Biomass growth
+wm-residue-sulphuric-acid=Bio remains reprocessing
 wm-bob-artifact-synth=Biomass into alien artifacts
 
 [recipe-description]
+kr-biomass-growing=Biomass growth in bio laboratory
+wm-residue-sulphuric-acid=High temperature bio remains transformation into sulfuric acid
 kr-burn=Burn __1__. This process produces no byproducts, but will release a high quantity of pollution into the atmosphere.
 kr-burn-with-residue=Burn __1__. This process will release a high quantity of pollution and may produce __2__ as a byproduct.
 wm-bob-artifact-synth=Making alien artifacts out of creep bio products
@@ -85,7 +84,7 @@ kr-military=Military
 wm-creepmining-droid=Creep extraction
 
 [technology-description]
-kr-bio-processing=Makes biters research much less biomass hungry, but still requires some creep type-1 hunt.
+kr-bio-processing=Allows biomass proliferation in laboratory.
 wm-creepmining-droid=Build droids to automatically search (in a small radius) and extract creep from planet surface
 
 [tooltip-category]
